--- a/pages/JS/浅拷贝和深拷贝.html
+++ b/pages/JS/浅拷贝和深拷贝.html
@@ -122,6 +122,12 @@
       newObj.name = "newObj";
       console.log(object1, "object1");
       console.log(newObj, "newObj");
+
+      let arr1 = [1, 2, { name: "obj", age: 18 }];
+      let newArr = deepClone(arr1);
+      newArr[2].name = "newObj";
+      console.log(arr1, "arr1");
+      console.log(newArr, "newArr");
     </script>
   </body>
 </html>
